syntax = "proto3";

package payment_service;

option go_package = "/internal/grpc/pb";

import "google/protobuf/timestamp.proto";

service PaymentService {
  rpc GetCards(GetCardsRequest) returns(GetCardsResponse);
  rpc CreateCard(CreateCardRequest) returns(CreateCardResponse);
  rpc UpdatecCard(UpdateCardRequest) returns(UpdateCardResponse);
  rpc DeleteCard(DeleteCardRequest) returns(DeleteCardResponse);
}

message Card {
  uint64 id = 1;
  string card_number = 2;
  string card_holder = 3;
  google.protobuf.Timestamp expiry_date = 4;
  uint64 cvv = 5;
  bool is_default = 6;
  uint64 user_id = 7;
}

message GetCardsRequest {
  uint64 user_id = 1;
}

message GetCardsResponse {
  repeated Card result = 1;
}

message CreateCardRequest {
  uint64 user_id = 6;
  string card_number = 1;
  string card_holder = 2;
  google.protobuf.Timestamp expiry_date = 3;
  uint64 cvv = 4;
  bool is_default = 5;
}

message CreateCardResponse {
  string result = 1;
}

message UpdateCardRequest {
  uint64 id = 1;
  string card_number = 2;
  string card_holder = 3;
  google.protobuf.Timestamp expiry_date = 4;
  uint64 cvv = 5;
  bool is_default = 6;
  uint64 user_id = 7;
}

message UpdateCardResponse {
  string result = 1;
}

message DeleteCardRequest {
  uint64 id = 1;
  uint64 user_id = 2;
}

message DeleteCardResponse {
  string result = 1;
}